apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.6.0
        ports:
        - containerPort: 9000
        
        volumeMounts:
        - name: mealie-data
          mountPath: /app/data
        resources:
          limits:
            memory: "1000Mi"
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data-pvc
