apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
spec:
  type: NodePort
  selector:
    app: mealie
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30000  # Adjust as needed
